[package]
name = "rngn"
version = "0.1.0"
authors = ["Jerome Andaya <jandaya@bu.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "rngn"
path = "src/lib.rs"

[[bin]]
name = "rngn"
path = "src/main.rs"

[dependencies]
num = "0.2"
